<resources>
    <string name="app_name">api_korea</string>
    <string name="sdate">날짜</string>
    <string name="startcode">검색조건 대기환경연구소 코드</string>
    <string name="itemcode">검색조건 항목코드</string>
    <string name="tiemcode">검색조건 시간구분</string>
    <string name="vlaue">측정 농도</string>
    <string name="apikey">Qqpcpx3goLGt5I9rRel4740aHPeckfo48EhDQ1c4pFjLIzKv/vXjDrGskdQdoYxZNpdPbrg0u8w6C4datQphPw==</string>
</resources>