<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sdate"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/startcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startcode"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/itemcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itemcode"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tiemcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tiemcode"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/vlaue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vlaue"
            android:textSize="18sp"/>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_list" />

</LinearLayout>